--- a/src/style.css
+++ b/src/style.css
@@ -1,54 +1,12 @@
 body {
   background-color: #171616;
 }
-
+ 
 h1 {
-  background-color: black;
-  color: white;
+  background-color: #171616;
+  color: #fff;
   text-align: center;
   font-size: 50px;
   padding: 20px;
   margin: 0px;
-}
-
-#profile {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  margin: 50px auto;
-  max-width: 600px;
-  padding: 40px;
-  text-align: center;
-}
-
-#profile h2 {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-#avatar {
-  background-color: #ddd;
-  border-radius: 50%;
-  display: block;
-  height: 150px;
-  margin: 20px auto;
-  width: 150px;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-}
-
-li {
-  margin-bottom: 10px;
-}
-
-a {
-  color: #1db954;
-  font-weight: 700;
-  text-decoration: none;
 }
